# space-sim

./: Cargo.toml  README.md
assets/models/: testlevel.glb
assets_src/models/: testlevel.blend  testlevel.blend1
crates/camera/: Cargo.toml
crates/camera/src/: lib.rs
crates/part/: Cargo.toml
crates/part/src/: lib.rs
crates/player/: Cargo.toml
crates/player/src/: lib.rs
src/: lib.rs  main.rs
