[package]
name = "space-sim"
version = "0.1.0"
edition = "2024"

[workspace.dependencies]
avian3d = "0.3.1"
bevy = "0.16.1"
bevy-tnua = "0.24.0"
bevy-tnua-avian3d = "0.5.0"
bevy_enhanced_input = "0.12.0"

[dependencies]
avian3d = { workspace = true }
bevy = { workspace = true }
bevy-inspector-egui = "0.31.0"
bevy-tnua = { workspace = true }
bevy-tnua-avian3d = { workspace = true }
bevy_enhanced_input = { workspace = true }
player = { path = "crates/player" }
part = { path = "crates/part" }

[workspace]
members = [ "crates/*" ]
resolver = "2"
